--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requests = "^2.32.3"
 solana = "^0.30.2"
 loguru = "^0.7.2"
 retry = "^0.9.2"
+pydantic = "^2.7.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
@@ -19,6 +20,7 @@ flake8 = "^5.0.4"
 isort = "^5.10.1"
 black = "^22.10.0"
 shellcheck-py = "^0.8.0.4"
+ipython = "^8.25.0"
 
 [tool.mypy]
 exclude = "(env|venv|.env|.venv|temp|^migrations)"
