--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requests = "^2.32.3"
 solana = "^0.30.2"
 loguru = "^0.7.2"
 pydantic = "^2.7.3"
-retry = {git = "https://github.com/riven314/retry.git"}
+# my fork make retry compatible with loguru
+retry = { git = "https://github.com/riven314/retry.git" }
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
