--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ solana = "^0.30.2"
 loguru = "^0.7.2"
 pydantic = "^2.7.3"
 # my fork make retry compatible with loguru
-retry = {git = "https://github.com/riven314/retry.git"}
+retry = { git = "https://github.com/riven314/retry.git" }
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
@@ -28,7 +28,7 @@ exclude = "(env|venv|.env|.venv|temp|^migrations)"
 warn_unused_ignores = true
 warn_redundant_casts = true
 check_untyped_defs = true
-plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
+plugins = ["pydantic.mypy"]
 
 [tool.isort]
 profile = "black"
@@ -41,6 +41,14 @@ ignore = ['W503']
 
 [tool.black]
 exclude = '^/migrations|.venv'
+
+[[tool.mypy.overrides]]
+module = "requests.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "retry.*"
+ignore_missing_imports = true
 
 [build-system]
 requires = ["poetry-core=1.2.2"]
